fixed spacing issue

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -119,7 +119,7 @@ div#about{
     display:block;
 }
 
-#contact>li>div>p>a {
+#contact>li>div>a {
     text-decoration: none;
     color: black;
 }
